--- a/notes/shell-1.Rmd
+++ b/notes/shell-1.Rmd
@@ -19,6 +19,8 @@ output:
     keep_md: yes
 ---
 
+A Git entry
+
 ```{r setup, include=FALSE}
 ##This Invisible Chunk is required in all CRMDA documents
 outdir <- paste0("tmpout")
